# ChangeLog for media-libs/ffmpegsource
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*ffmpegsource-9999 (13 Aug 2011)

  13 Aug 2011; Nikoli <nikoli@lavabit.com> +ffmpegsource-9999.ebuild,
  +metadata.xml:
  initial ebuild
