@@ -1,3 +1,5 @@
-EBUILD ffmpegsource-9999.ebuild 738 RMD160 d9493f705d5261de540cac8d35ecbb698299ec57 SHA1 1f35e14340a7d3039907abc0aa32028d2c24c628 SHA256 d10d19bff1344e7526f2d32cfbc59ed761f32651fb86830ee30e06674f8528b5
-MISC ChangeLog 263 RMD160 e49713e29980d654ea27ca01e257e6438c87d4f5 SHA1 6a65b8d38e91556bf6c1bc3a49e35dcbaa61638d SHA256 13746784192632c358c95f0bc9c7b8d8382c9a5bf5059a1338d83e3420bf933e
-MISC metadata.xml 248 RMD160 2418fc56f477393d0e1091455ff5523b58c07a83 SHA1 834f92f9ff1f64ceaac6c39e835ea63873d03d51 SHA256 baa352e20702c6ad701749c41aa0a8cce9c1fc62511a96b9adefc42a788026ab
+DIST ffms-2.16-src.tar.bz2 391101 RMD160 6aa08b3500f7145e88873006ba2bc083b36b1022 SHA1 0446375a2ec0cddee85de3b7b1c83eb5938ce8f1 SHA256 0a79d3937b901dbf3bff808e97340048a3e9c4841d893d47daab82be1bf3f7c1
+EBUILD ffmpegsource-2.16.ebuild 826 RMD160 a9d0a2a2940093a5932f20c194d2fdba97d580c4 SHA1 eb3ce656c83cd5d3b828b73250727ed917db71d2 SHA256 1c2b57dc2821239ba1ba84a0886e635e320b6def50c0fb2e71e5be7027b01a65
+EBUILD ffmpegsource-9999.ebuild 774 RMD160 ac284307be3964a8c6f32a697a49e0240ad7ff13 SHA1 3b38a34198cb38ce49655587940210c126ccd8b5 SHA256 8ad2c1804b91befce4155c65aa1b2eedb1112d2fb22cc3b87f0683dae9a06cce
+MISC ChangeLog 443 RMD160 5a45e59d623d1b470c353daca6ef9ee1e1ae95d9 SHA1 1d7a106dcaafa740a1c23dcdcf3cef1eb7a26343 SHA256 e6cb7b6367887bf0eeaa4794ffa33336cb0b4e20b8bd5540b706f0be2c48e6d8
+MISC metadata.xml 358 RMD160 a7b25ad88f7bb86bf9ab2ad32aca97e90f2e0aac SHA1 72f605e975cbc5ee9174054e00e8e02dcf4277e2 SHA256 fe3a1b44441d91ef76538452c802d81e64d3105daf36d8b60ba77237186618fa
