@@ -6,4 +6,7 @@
 		<email>nikoli@lavabit.com</email>
 		<name>Nikoli</name>
 	</maintainer>
+	<use>
+		<flag name="postproc">Enables image post-processing via libpostproc (part of FFmpeg).</flag>
+	</use>
 </pkgmetadata>
