@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*ffmpegsource-2.16 (03 Sep 2011)
+
+  03 Sep 2011; Nikoli <nikoli@lavabit.com> +ffmpegsource-2.16.ebuild,
+  ffmpegsource-9999.ebuild, metadata.xml:
+  version bump, add postproc USE
+
 *ffmpegsource-9999 (13 Aug 2011)
 
   13 Aug 2011; Nikoli <nikoli@lavabit.com> +ffmpegsource-9999.ebuild,
